[project]
name = "doctor-context-mcp"
version = "0.1.0"
description = "MCP server that audits local dev environments for Java, Python, and .NET projects"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
doctor-context-mcp = "src.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

